<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:padding="24dp"
    app:layout_scrollFlags="scroll|enterAlways">

    <com.music.ting.ui.widget.RoundImageView
        android:id="@+id/user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_avatar"/>

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/user_image"
        android:layout_toEndOf="@id/user_image"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/user_name"
        android:textColor="@color/textColor"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_toRightOf="@id/user_image"
        android:layout_toEndOf="@id/user_image"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/user_email"
        android:textSize="14sp"
        android:textColor="@color/textColor"/>
    <TextView
        android:id="@+id/user_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_email"
        android:layout_toRightOf="@id/user_image"
        android:layout_toEndOf="@id/user_image"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/user_bio"
        android:textSize="14sp"
        android:textColor="@color/textColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_image"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/songs_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/songs_count"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/songs"
                android:textSize="14sp"
                android:textColor="@color/textColor"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/like_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes_count"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/likes"
                android:textSize="14sp"
                android:textColor="@color/textColor"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/comments_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments_count"
                android:textSize="20sp"
                android:textColor="@color/textColor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comments"
                android:textSize="14sp"
                android:textColor="@color/textColor"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>