<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/download_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_fa_pause"
        android:contentDescription="@string/download_start"/>

    <TextView
        android:id="@+id/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textSize="16sp"
        android:layout_toRightOf="@id/download_control"
        android:layout_toEndOf="@id/download_control"/>

    <com.daimajia.numberprogressbar.NumberProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/NumberProgressBar_Default"
        android:layout_toRightOf="@id/download_control"
        android:layout_below="@+id/song_title"
        android:layout_toLeftOf="@+id/delete_download"
        android:layout_toStartOf="@+id/delete_download"/>
    <ImageView
        android:id="@+id/delete_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_fa_trash_o"
        android:contentDescription="@string/download_cancel"/>


</RelativeLayout>