<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:background="#ffffff"
    card_view:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/song_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_default_pic"/>

        <TextView
            android:id="@+id/song_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/song_image"
            android:textStyle="bold"
            tools:text="@string/song_name"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/song_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/song_image"
            android:layout_below="@id/song_title"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textColor="@color/navigation_text"
            tools:text="@string/song_artist" />


        <TextView
            android:id="@+id/song_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/song_artist"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/navigation_text"
            android:textSize="14sp"
            tools:text="@string/song_bio" />

        <ImageView
            android:id="@+id/like"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/song_content"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_like"/>

        <com.music.ting.ui.widget.RoundImageView
            android:id="@+id/share_user"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@+id/song_content"
            android:layout_toLeftOf="@+id/like"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_default_pic"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>